--- a/_includes/header.html
+++ b/_includes/header.html
@@ -70,7 +70,7 @@
         
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="mailto:bewer@posteo.de"><i class="icon fa fa-envelope-o"></i></a>
+        <a aria-label="Send email" href="mailto:nbewer@posteo.de"><i class="icon fa fa-envelope-o"></i></a>
         <!-- <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/mauriciourraco7"><i class="icon fa fa-instagram" aria-hidden="true"></i></a> -->
         <!-- <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/mauricio.urraco"><i class="icon fa fa-facebook" aria-hidden="true"></i></a> -->
         <a aria-label="My Github" target="_blank" href="https://github.com/NBwr"><i class="icon fa fa-github" aria-hidden="true"></i></a>
