--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,9 +5,9 @@
 
   <div class="wrapper" align='center'>
     <span class="change square individual">
-      <a class="change ninth before after" href="mailto:bewer@posteo.de" style="font-weight: inherit; margin-top: 2cm; margin-bottom: 2cm; display: inline-block;" onclick="this.href='mailto:' + 'bew' + 'er' + '@' + 'posteo' + 
+      <a class="change ninth before after" href="mailto:nbewer@posteo.de" style="font-weight: inherit; margin-top: 2cm; margin-bottom: 2cm; display: inline-block;" onclick="this.href='mailto:' + 'nbew' + 'er' + '@' + 'posteo' + 
       '.de'">
-        bewer[at]posteo.de  
+        nbewer[at]posteo.de  
       </a>
     </span>
   </div>
