--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
 
   <div class="wrapper" align='center'>
     <span class="change square individual">
-      <a class="change ninth before after" href="mailto:nbewer@posteo.de" style="font-weight: inherit; margin-top: 2cm; margin-bottom: 2cm; display: inline-block;" onclick="this.href='mailto:' + 'nbew' + 'er' + '@' + 'posteo' + 
+      <a class="change ninth before after" href="mailto:nbewer@posteo.de" style="font-weight: inherit; margin-top: 2cm; margin-bottom: 2cm; display: inline-block; color: #646464;" onclick="this.href='mailto:' + 'nbew' + 'er' + '@' + 'posteo' + 
       '.de'">
         nbewer[at]posteo.de  
       </a>
