--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 
 <footer class="footer">
     <!-- <p>&copy; {{ site.username }}</p> -->
-    <p>Built with <i class="icon fa fa-heart" aria-hidden="true"></i> by Nikolaj Bewer. Credit where credit's due: Thanks to 
+    <p>Built with <i class="icon fa fa-heart" aria-hidden="true"></i> by 
+        <a href="https://github.com/NBwr" target="_blank">Nikolaj Bewer</a>. 
+        Credit where credit's due: Thanks to 
         <a href="https://vincentgarreau.com/particles.js/" target="_blank">Vincent</a>,
         <a href="https://mattboldt.com/demos/typed-js/" target="_blank">Matt</a> & 
         <a href="http://jekyllthemes.org/themes/Minimal-Resume/" target="_blank">Mauricio</a>.
