--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,7 +54,7 @@
               'I am a Data Scientist',
               'I am a Researcher',
               'I am an aspiring App and Web Developer',
-              "<a href='#contact' data-scroll class='change first after' style='color: black'> who are you? </a>"],
+              "<a href='#contact' data-scroll class='change first after' style='color: #4d4d4d'> Who are you? </a>"],
             typeSpeed: 80,
             backSpeed: 80,
             loop: false,
