--- a/_includes/about.html
+++ b/_includes/about.html
@@ -110,7 +110,7 @@
 
       <p>
           As part of the preprocessing step any non-alphabetic characters, HTML tags, etc were removed. Additionally tokenization and lemmatization was applied.
-          For the Word2Vec implementation gensim was used. The RNN outperformed a simple Neural Netowrk and the benchmark model (simple Logistic Regression).
+          For the Word2Vec implementation gensim was used. The RNN outperformed a simple Neural Network and the benchmark model (simple Logistic Regression).
       </p>
         <p>
           <span style="color: #000000"> <strong> Technologies: </strong></span> Python, Anaconda, Word2Vec, scikit-learn, Keras, matplotlib, Numpy, Pandas
