--- a/_includes/about.html
+++ b/_includes/about.html
@@ -63,7 +63,7 @@
         will likely lead to a Blog post in the near future.  
       </p>
       <p>
-        <span style="color: #000000"> <strong> Technologies: </strong></span> Python, JupyterHub, Keras, SHAP, XGBoost, matplotlib, Numpy, Git
+        <span style="color: #000000"> <strong> Technologies: </strong></span> Python, JupyterHub, Keras, SHAP, XGBoost, matplotlib, Numpy, Git, Bash
       </p>
       <!--
       <h3 align="left">R Shiny App: Weather Map</h3> 
