--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
         <a href="https://vincentgarreau.com/particles.js/" target="_blank">Vincent</a>,
         <a href="https://mattboldt.com/demos/typed-js/" target="_blank">Matt</a> & 
         <a href="http://jekyllthemes.org/themes/Minimal-Resume/" target="_blank">Mauricio</a>.
+        <!--<a href="{% include ddssggvvoo.html %}" align="right">DSGVO</a>-->
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="{{ '/assets/js/sweet-scroll.min.js' | prepend: site.baseurl }}"></script>
