--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -2,13 +2,7 @@
   <!-- <h1 class='italicright' align="left" font-size: 100px>About</h1> -->
   <h1 align="left" style="font-size: 300%">About</h1>
 
-  <h3>I'm a Business Informatics student from Berlin.</h3> 
-  <h3>I'm student in Information Systems from Berlin.</h3> 
-  <h3>I'm student in Information Systems from Berlin.</h3> 
-  <h3>I'm student in Information Systems from Berlin.</h3> 
-  <h3>I'm student in Information Systems from Berlin.</h3> 
-  <h3>I'm student in Information Systems from Berlin.</h3> 
-  <h3>I'm student in Information Systems from Berlin.</h3> 
-  <h3>I'm student in Information Systems from Berlin.</h3> 
+  <h2>I am a Data Scientist with experience in the preparation, analysis and interpretation of large-scale data sets. 
+    I am enthusiastic in the development of complex prognosis models and neural networks.</h2> 
 
   </div>
